--- a/src/app/pages/clients/clients.component.html
+++ b/src/app/pages/clients/clients.component.html
@@ -1,18 +1,37 @@
 <section class="flex flex-col h-full border-b">
   <div class="flex justify-between items-end mb-2">
     <app-title [value]="'Clientes'" classColor="text-sky-500" />
-    <div>
+    <div class="flex gap-2">
+      @if(checkeds.length > 1){<app-button
+        (onClick)="handleModals('modalDelete')"
+        label="Eliminar clientes"
+        icon="pi pi-trash"
+        iconPos="right"
+        typeButton="danger"
+        [disabled]="this.loading()"
+      />}
       <app-button
         (onClick)="handleModals('modalExcel')"
         label="Cargar excel"
         icon="pi pi-upload"
         iconPos="right"
         typeButton="success"
+        [disabled]="this.loading()"
       />
       <!-- <p-button (onClick)="handleModals('modalExcel')" label="Cargar excel" icon="pi pi-upload" iconPos="right" /> -->
     </div>
   </div>
   <app-progress-bar-loader [loading]="this.loading()" />
+  <div class="w-full ">
+    <input
+      class="w-2/5 px-2 py-1 bg-slate-300 rounded-md focus:outline-none placeholder:text-slate-500"
+      type="text"
+      pInputText
+      placeholder="Buscar cliente"
+      [value]="search$.getValue()"
+      (input)="onSearchChange($event)"
+    />
+  </div>
   <div
     class="h-full mt-2 flex flex-col relative overflow-y-scroll border-l border-t border-r"
   >
@@ -35,9 +54,9 @@
       >
         <li class="pl-4 col-span-1" (click)="$event.stopPropagation()">
           <p-checkbox
-            [value]="isChecked(client.id)"
-            [binary]="true"
+            [value]="client"
             (onChange)="onChecked(client.id)"
+            [inputId]="client.id"
           />
         </li>
         <li class="col-span-2 py-2">{{ client.name }} {{ client.lastName }}</li>
@@ -85,7 +104,9 @@
     <button
       class="px-1 py-1 text-2xl cursor-pointer rounded-xl pi pi-angle-right text-sky-600 disabled:text-gray-400 disabled:cursor-default"
       (click)="nextPage()"
-      [disabled]="page() === totalPages() || this.loading()"
+      [disabled]="
+        page() === totalPages() || this.loading() || page() > totalPages()
+      "
     ></button>
   </div>
 </section>
@@ -119,7 +140,7 @@
       icon="pi pi-trash"
       typeButton="danger"
       (onClick)="
-        onDeleteClient(openDialog().client!.id);
+        onDeleteClient([openDialog().client!.id]);
         openDialog.set({ open: false, client: null })
       "
     />
@@ -128,6 +149,30 @@
       icon="pi pi-times"
       typeButton="info"
       (onClick)="openDialog.set({ open: false, client: null })"
+    />
+  </div>
+</app-generic-modal>
+
+<app-generic-modal
+  [visible]="modals() === 'modalDelete'"
+  title="Eliminar clientes"
+  (onClose)="handleModals(null)"
+>
+  <div class="flex-col flex">
+    <p>Estas seguro que deseas eliminar los clientes seleccionados ?</p>
+  </div>
+  <div class="flex justify-end gap-4">
+    <app-button
+      label="Eliminar"
+      icon="pi pi-trash"
+      typeButton="danger"
+      (onClick)="onDeleteClient(checkeds); handleModals(null)"
+    />
+    <app-button
+      label="Cancelar"
+      icon="pi pi-times"
+      typeButton="info"
+      (onClick)="handleModals(null)"
     />
   </div>
 </app-generic-modal>
